Added marek page and random name to cat page

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,1 +1,2 @@
-"<div style = 'border: 3px red dashed;'><img src='http://bit.ly/1eze8aE'></div>"
+<h1>My name is <%=["Amigo", "Oscar", "Viking"][rand(0..2)] %></h1>
+<div style = 'border: 3px red dashed;'><img src='http://bit.ly/1eze8aE'></div>
