--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -1,2 +1,2 @@
-<h1>My name is <%= @random_name %></h1>
+<h1>My name is <%= @name %></h1>
 <div style = 'border: 3px red dashed;'><img src='http://bit.ly/1eze8aE'></div>
